<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nested_scroll_view_step"
        style="@style/NestedScrollViewStep">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                android:id="@+id/player_view_step"
                app:fastforward_increment="1000"
                app:rewind_increment="1000"
                 style="@style/PlayerViewStep"
                />

            <ImageView
                android:id="@+id/image_view_step"
                style="@style/ImageViewStep" />

            <TextView
                android:id="@+id/text_view_step_description"
                style="@style/TextViewStepDescription" />

        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.constraint.Guideline
        android:id="@+id/guideline_step_details_vertical"
        style="@style/GuidelineVertical"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_previous_step"
        style="@style/CardViewStepPrevious">

        <Button
            android:id="@+id/button_previous_step"
            style="@style/ButtonStep"
            android:text="@string/previous" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_next_step"
        style="@style/CardViewStepNext">

        <Button
            android:id="@+id/button_next_step"
            style="@style/ButtonStep"
            android:text="@string/next" />

    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>