...
    <string name="add_widget">Add widget</string>

    <string name="recipe_cannot_be_displayed">Recipe cannot be displayed.</string>
    <string name="baking_preferences" translatable="false">baking_preferences</string>
    <string name="serialized_recipe" translatable="false">serialized_recipe</string>
    <string name="choose_a_recipe">Choose a recipe</string>
    <string name="action_bar" translatable="false">action_bar</string>
</resources>

